page/generic.scss
#fcitx-theme {
  user-select: none; /* disable text select */
  font-family: sans-serif;
}

.fcitx-decoration {
  display: inline-grid;
  padding: 0;
  gap: 0;
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: auto;
}

.fcitx-panel {
  overflow: hidden; /* needed because of border-radius */
  display: inline-block; /* wrap content, not fill parent */

  &.fcitx-vertical-rl {
    writing-mode: vertical-rl;
  }

  &.fcitx-vertical-lr {
    writing-mode: vertical-lr;
  }
}

.fcitx-preedit, .fcitx-aux-up {
  display: inline-flex; /* put the cursor on the same line with preedit */
  align-items: center;
  justify-content: center;
  line-height: 1em; /* align preedit and text cursor */

  &.fcitx-hidden {
    display: none; /* needed because the above display has higher precedence than .hidden's */
  }
}

.fcitx-aux-down {
  display: flex;
  align-items: center;

  &.fcitx-hidden {
    display: none;
  }
}

.fcitx-candidate-inner {
  display: flex;
  gap: 6px;
  align-items: center; /* English words have lower height */
  line-height: 1em; /* align label and candidates */
  position: relative; /* for absolute position of mark */
  box-sizing: content-box; /* f5j: vitepress sets border-box for * which makes candidate shorter */
}

.fcitx-label {
  /* Label is usually a single number. Will look ugly when all parts have vertical writing mode. */
  writing-mode: horizontal-tb;
}

.fcitx-hoverables {
  display: flex;

  .fcitx-divider {
    display: flex;
  }

  &.fcitx-vertical {
    flex-direction: column;

    .fcitx-divider {
      flex-direction: row;
    }
  }

  &.fcitx-horizontal {
    flex-direction: row;

    .fcitx-candidate {
      /* When horizontal and there is multi-line candidate,
      make sure other candidates are vertical centered.
      Don't enable it for vertical. It will shrink highlight. */
      display: flex;
    }

    .fcitx-divider {
      flex-direction: column;
    }
  }

  &.fcitx-horizontal-scroll {
    max-block-size: 180px; /* For default 6 rows. If block-size, 2 rows will have 90px each. */
    transition: max-block-size 300ms;
    inline-size: 400px;
    flex-wrap: wrap;
    overflow-y: auto;
    overscroll-behavior: none;

    .fcitx-candidate {
      min-inline-size: 60px;
    }

    .fcitx-candidate-inner {
      width: 100%;
    }

    .fcitx-label {
      opacity: 0;
    }

    .fcitx-highlighted-row .fcitx-label {
      opacity: 1;
    }

    .fcitx-comment {
      overflow-wrap: anywhere; /* Disallow long comment to introduce horizontal scrollbar. */
    }

    .fcitx-divider {
      flex-grow: 1;
    }
  }
}

:is(.fcitx-vertical-rl, .fcitx-vertical-lr) .fcitx-paging svg {
  transform: rotate(90deg);
}

.fcitx-paging {
  display: flex;

  &.fcitx-arrow svg {
    block-size: 12px;
    inline-size: 12px;
  }

  &.fcitx-triangle svg {
    block-size: 16px;
    inline-size: 16px;
  }

  &.fcitx-scroll {
    .fcitx-expand {
      block-size: 18px;
      inline-size: 18px;
      display: flex;
      justify-content: center;
      align-items: center;

      svg {
        transform: rotate(90deg);
        width: 16px;
      }
    }
  }
}

/* When horizontal, paging is shorter than candidates, so need to centralize them. */
.fcitx-prev, .fcitx-next {
  display: flex;
  align-items: center;
}

.fcitx-paging-inner {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
}

.fcitx-mark {
  opacity: 0;

  &.fcitx-no-text {
    position: absolute;
    inset-inline-start: 0;
    inline-size: 3px;
    border-radius: 1.5px;
    block-size: 16px;
    background-color: white;
  }
}

.fcitx-highlighted :active .fcitx-mark.fcitx-no-text {
  block-size: 12px;
}

.fcitx-hidden {
  display: none;
}

.fcitx-blur {
  backdrop-filter: blur(16px); /* blur background */
}

.fcitx-contextmenu {
  position: absolute;
  z-index: 1000;
  display: none;
  overflow: hidden;
}

.fcitx-menu-item {
  display: flex;
  align-items: center;
}

